Made hovers better and fixed wrapping of screens

--- a/source/stylesheets/_base.scss
+++ b/source/stylesheets/_base.scss
@@ -466,6 +466,20 @@ a.button-play {
     margin: 0 32px 42px 0;
     color: rgba(0,0,0,0.6);
     line-height: 1.4;
+    position: relative;
+}
+
+.mobile-screen-wrapper i {
+    position: absolute;
+    top: 2px;
+    left: -4px;
+    color: rgba(0,0,0,0.3);
+    opacity: 0;
+    transition: opacity 0.2s;
+}
+
+.mobile-screen-wrapper:hover i {
+    opacity: 1;
 }
 
 .mobile-screen-wrapper strong {
@@ -476,7 +490,7 @@ a.button-play {
 
 .mobile-screen-wrapper .desc {
     display: block;
-    min-height: 8em;
+    min-height: 10em;
     padding-left: 14px;
 }
 
